Bug 103804 - Image scaling causes Intel Skylake GPU crash when OpenGL is enabled
Summary: Image scaling causes Intel Skylake GPU crash when OpenGL is enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.2.3.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords:
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-11-09 09:54 UTC by Tomaz Vajngerl
Modified: 2016-11-11 11:07 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tomaz Vajngerl 2016-11-09 09:54:24 UTC
Description:
When an image is inserted into Writer and is scaled, it can happen that the GPU driver crashes. This happens on Windows with OpenGL enabled and with Intel Skylake GPU. After the crash, all LO windows are corrupted.

Steps to Reproduce:
1. Insert image.
2. Scale the image multiple times until the driver crashes.

Actual Results:  
Driver crash and LO window corruption after the crash

Expected Results:
Works as expected...


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:49.0) Gecko/20100101 Firefox/49.0
Comment 1 Commit Notification 2016-11-09 09:58:35 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d115a235bf3ff5366d992d01fb418a3eacb9d125

tdf#103804 reduced register areaScale shader and detection for intel

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2016-11-11 11:07:58 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=74eebc7a0768659426911541e16973bdf037c157&h=libreoffice-5-2

tdf#103804 reduced register areaScale shader and detection for intel

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.